Refactor: corrections for errors, added open-in-view to properties
